--- a/datazilla/webapp/static/html/help/metrics_summary.html
+++ b/datazilla/webapp/static/html/help/metrics_summary.html
@@ -83,7 +83,7 @@
 
         <div class="su-help-pc-2"></div>
         <div class="ui-state-highlight ui-corner-all su-vis-detail-panel su-text-background">
-            <p><b>Top Control Panel</b></p>
+            <p><b>Bottom Control Panel</b></p>
             <p>This control panel works in conjuction with selecting a range directly on the chart.  A range of mushes can be selected by clicking and dragging the cursor on the chart.  The first and last revision in the range will be auto populated in the begin and end entry boxes below.  The get range button takes you to a mercurial web page depicting all of the changests between the revision selected.</p>
         </div>
       </div>
